--- a/instructions.tex
+++ b/instructions.tex
@@ -1098,6 +1098,20 @@ the container in which the previous setup were install, not on the host running 
 \end{minted}
 \end{tcolorbox}
 
+% ------------------------------------------------------------------------------
+\section{micro-ROS custom agent}
+%\label{sec:agent}
+
+https://github.com/micro-ROS/micro_ros_setup/issues/383
+
+https://github.com/micro-ROS/micro_ros_setup/issues/591
+
+https://micro.ros.org/docs/tutorials/advanced/create_custom_transports/
+
+https://github.com/eProsima/Micro-XRCE-DDS-Agent/blob/develop/src/cpp/transport/custom/CustomAgent.cpp
+
+/microros_ws/build/micro_ros_agent/agent/src/xrceagent/src/cpp/transport/custom/CustomAgent.cpp 
+
 % ==============================================================================
 \pagebreak
 \appendix
