links put as a ref should be set a url. Should fix the CICD pipeline

--- a/instructions.tex
+++ b/instructions.tex
@@ -1102,15 +1102,15 @@ the container in which the previous setup were install, not on the host running 
 \section{micro-ROS custom agent}
 %\label{sec:agent}
 
-https://github.com/micro-ROS/micro_ros_setup/issues/383
+\url{https://github.com/micro-ROS/micro_ros_setup/issues/383}
 
-https://github.com/micro-ROS/micro_ros_setup/issues/591
+\url{https://github.com/micro-ROS/micro_ros_setup/issues/591}
 
-https://micro.ros.org/docs/tutorials/advanced/create_custom_transports/
+\url{https://micro.ros.org/docs/tutorials/advanced/create_custom_transports/}
 
-https://github.com/eProsima/Micro-XRCE-DDS-Agent/blob/develop/src/cpp/transport/custom/CustomAgent.cpp
+\url{https://github.com/eProsima/Micro-XRCE-DDS-Agent/blob/develop/src/cpp/transport/custom/CustomAgent.cpp}
 
-/microros_ws/build/micro_ros_agent/agent/src/xrceagent/src/cpp/transport/custom/CustomAgent.cpp 
+\verb|/microros_ws/build/micro_ros_agent/agent/src/xrceagent/src/cpp/transport/custom/CustomAgent.cpp|
 
 % ==============================================================================
 \pagebreak
